--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "bignumber.js": "^9.0.0",
+    "crypto-js": "^4.0.0",
     "lodash": "^4.17.19",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
@@ -40,7 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/react-hooks": "^3.4.1"
+    "@testing-library/react-hooks": "^3.4.1",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/crypto-js": "^3.1.47"
   }
 }
